welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var decalage:Int
      ^Array2:6: error: local variables must be initialized
  var decalage:Int
      ^